--- a/Core/TomPIT.ComponentModel/TomPIT.ComponentModel.csproj
+++ b/Core/TomPIT.ComponentModel/TomPIT.ComponentModel.csproj
@@ -14,11 +14,11 @@
     <RootNamespace>TomPIT.ComponentModel</RootNamespace>
     <Authors>Tom PIT</Authors>
     <Company>Tom PIT</Company>
-    <Product>Microservice Platform</Product>
-    <AssemblyVersion>2.1.520.3</AssemblyVersion>
+    <Product>Tom PIT.connected</Product>
+    <AssemblyVersion>2.1.527.1</AssemblyVersion>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <FileVersion>2.1.520.3</FileVersion>
-    <Version>2.1.520.3</Version>
+    <FileVersion>2.1.527.1</FileVersion>
+    <Version>2.1.527.1</Version>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>portable</DebugType>
