--- a/Development/TomPIT.BigData/TomPIT.MicroServices.BigData.csproj
+++ b/Development/TomPIT.BigData/TomPIT.MicroServices.BigData.csproj
@@ -1,9 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyVersion>2.1.520.3</AssemblyVersion>
-    <FileVersion>2.1.520.3</FileVersion>
-    <Version>2.1.520.3</Version>
+    <AssemblyVersion>2.1.527.1</AssemblyVersion>
+    <FileVersion>2.1.527.1</FileVersion>
+    <Version>2.1.527.1</Version>
+    <Authors>Tom PIT</Authors>
+    <Company>Tom PIT</Company>
+    <Product>Tom PIT.connected</Product>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
