--- a/Worker/TomPIT.Worker.App/Worker.csproj
+++ b/Worker/TomPIT.Worker.App/Worker.csproj
@@ -8,10 +8,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>TomPIT.Worker</RootNamespace>
-    <AssemblyName>TomPIT.Experience.Worker</AssemblyName>
-    <AssemblyVersion>2.1.520.3</AssemblyVersion>
-    <FileVersion>2.1.520.3</FileVersion>
-    <Version>2.1.520.3</Version>
+    <AssemblyName>TomPIT.Connected.Worker</AssemblyName>
+    <AssemblyVersion>2.1.527.1</AssemblyVersion>
+    <FileVersion>2.1.527.1</FileVersion>
+    <Version>2.1.527.1</Version>
+    <Authors>Tom PIT</Authors>
+    <Company>Tom PIT</Company>
+    <Product>Tom PIT.connected</Product>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="wwwroot\**" />
