--- a/DataProviders/TomPIT.DataProviders.Sql/TomPIT.DataProviders.Sql.csproj
+++ b/DataProviders/TomPIT.DataProviders.Sql/TomPIT.DataProviders.Sql.csproj
@@ -15,6 +15,7 @@
     <Product>Tom PIT.connected</Product>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.SqlServer.Management.SqlParser" Version="150.37051.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
