--- a/DataProviders/TomPIT.DataProviders.BigData/TomPIT.DataProviders.BigData.csproj
+++ b/DataProviders/TomPIT.DataProviders.BigData/TomPIT.DataProviders.BigData.csproj
@@ -9,7 +9,7 @@
     <Version>2.1.610.1</Version>
   </PropertyGroup>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.DataProviders.Modbus&quot;" />
+    <Exec Command="copy &quot;$(TargetPath)&quot; &quot;c:\Deploy\Plugins\TomPIT.DataProviders.BigData&quot;" />
   </Target>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
