--- a/Development/TomPIT.Templates.IoT.Design/TomPIT.MicroServices.IoT.Design.csproj
+++ b/Development/TomPIT.Templates.IoT.Design/TomPIT.MicroServices.IoT.Design.csproj
@@ -21,6 +21,12 @@
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="CreateHandlers\Templates\IoTHub.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="CreateHandlers\Templates\IoTHub.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="3.1.2" />
   </ItemGroup>
   <ItemGroup>
