--- a/IoT/TomPIT.IoT.App/IoT.csproj
+++ b/IoT/TomPIT.IoT.App/IoT.csproj
@@ -16,6 +16,10 @@
     <Company>Tom PIT</Company>
     <Product>Tom PIT.connected</Product>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>portable</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Remove="wwwroot\**" />
     <Content Remove="wwwroot\**" />
