Started development on Print Spooler

--- a/Printing/TomPIT.Connected.Printing.Client/TomPIT.Connected.Printing.Client.csproj
+++ b/Printing/TomPIT.Connected.Printing.Client/TomPIT.Connected.Printing.Client.csproj
@@ -3,12 +3,22 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Configurations>Debug;Release;Development</Configurations>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <AppConfig>App.$(Configuration).config</AppConfig>
+  </PropertyGroup>  
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Development|AnyCPU'">
+    <Optimize>false</Optimize>
+    <DefineConstants>TRACE;TESTING;SIMULATION;CONSOLE</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="DevExpress.AspNetCore.Reporting" Version="19.2.3" />
-    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="5.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Text.Encodings.Web" Version="5.0.0" />
   </ItemGroup>
