Adder Copyright Banner, Modified settings and handlers, smaller bugfixes

--- a/Printing/TomPIT.Connected.Printing.Client/App.Debug.config
+++ b/Printing/TomPIT.Connected.Printing.Client/App.Debug.config
@@ -1,3 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="cdnUrl" value="https://sys-mpt.tompitapp.net/iot/iot" />
+    <add key="token" value="c00588c4-a3e8-4ed4-95e8-e995ba18ab5f" />
+    <!-- availablePrinters can be "default" (only default printer), "installed" (all installed printers) or semi-colon separated list of printer names -->
+    <add key="availablePrinters" value="default" />
+
+    <!-- loggingLevel can be "off" < "fatal" < "error" < "warning" < "info" < "debug" < "trace" < "all" -->
+    <add key="loggingLevel" value="debug" />
+
+    <!-- exceptionLoggingLevel can be "off", "errorMessage" or "stackTrace" -->
+    <add key="exceptionLoggingLevel" value="stackTrace" />
+  </appSettings>
 </configuration>
