--- a/Printing/TomPIT.Connected.Printing.Client/App.Release.config
+++ b/Printing/TomPIT.Connected.Printing.Client/App.Release.config
@@ -1,3 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="cdnUrl" value="http://sys-app/common/cdn/" />
+    <add key="token" value="0f69745a-c65f-437b-a025-5ed52e5dca72" />
+    <!-- availablePrinters can be "default" (only default printer), "installed" (all installed printers) or semi-colon separated list of printer names -->
+    <add key="availablePrinters" value="HPE9367C (HP Officejet Pro 8620)" />
+
+    <!-- loggingLevel can be "off" < "fatal" < "error" < "warning" < "info" < "debug" < "trace" < "all" -->
+    <add key="loggingLevel" value="error" />
+
+    <!-- exceptionLoggingLevel can be "off", "errorMessage" or "stackTrace" -->
+    <add key="exceptionLoggingLevel" value="errorMessage" />
+  </appSettings>
 </configuration>
