--- a/Printing/TomPIT.Connected.Printing.Client/TomPIT.Connected.Printing.Client.csproj
+++ b/Printing/TomPIT.Connected.Printing.Client/TomPIT.Connected.Printing.Client.csproj
@@ -1,20 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net4.7.2</TargetFramework>
     <Configurations>Debug;Release;Development</Configurations>
+    <AssemblyVersion>2.1.1125.1</AssemblyVersion>
+    <FileVersion>2.1.1125.1</FileVersion>
+    <Version>2.1.1125.1</Version>
   </PropertyGroup>
-
   <PropertyGroup>
     <AppConfig>App.$(Configuration).config</AppConfig>
-  </PropertyGroup>  
-
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Development|AnyCPU'">
     <Optimize>false</Optimize>
     <DefineConstants>TRACE;TESTING;SIMULATION;CONSOLE</DefineConstants>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="DevExpress.AspNetCore.Reporting" Version="19.2.3" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.0" />
@@ -22,9 +21,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Text.Encodings.Web" Version="5.0.0" />
   </ItemGroup>
-
   <ItemGroup>
     <Reference Include="System.Configuration.Install" />
   </ItemGroup>
-
 </Project>
