Added printer name mappings

--- a/Printing/TomPIT.Connected.Printing.Client/App.Debug.config
+++ b/Printing/TomPIT.Connected.Printing.Client/App.Debug.config
@@ -11,5 +11,8 @@
 
     <!-- exceptionLoggingLevel can be "off", "errorMessage" or "stackTrace" -->
     <add key="exceptionLoggingLevel" value="stackTrace" />
+
+    <!-- printerNameMappings is semi-colon separated list of mapped printer names in form of friendlyName=printerName;friendlyName2=printerName2... -->
+    <add key="printerNameMappings" value="Bjutiful printer=HPE9367C (HP Officejet Pro 8620)" />
   </appSettings>
 </configuration>
