--- a/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
+++ b/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <AssemblyVersion>2.1.1215.3</AssemblyVersion>
-    <FileVersion>2.1.1215.3</FileVersion>
-    <Version>2.1.1215.3</Version>
+    <AssemblyVersion>2.1.1210.1</AssemblyVersion>
+    <FileVersion>2.1.1210.1</FileVersion>
+    <Version>2.1.1210.1</Version>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
