--- a/Printing/TomPIT.Connected.Printing.Client/App.Debug.config
+++ b/Printing/TomPIT.Connected.Printing.Client/App.Debug.config
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="cdnUrl" value="https://sys-mpt.tompitapp.net/iot/iot" />
-    <add key="token" value="c00588c4-a3e8-4ed4-95e8-e995ba18ab5f" />
+    <add key="cdnUrl" value="https://sys-gorenc.tompitapp.net/cdn/" />
+    <add key="token" value="96c33b59-215b-4060-97cb-280a0b7570fa" />
     <!-- availablePrinters can be "default" (only default printer), "installed" (all installed printers) or semi-colon separated list of printer names -->
-    <add key="availablePrinters" value="default" />
+    <add key="availablePrinters" value="HPE9367C (HP Officejet Pro 8620)" />
 
     <!-- loggingLevel can be "off" < "fatal" < "error" < "warning" < "info" < "debug" < "trace" < "all" -->
-    <add key="loggingLevel" value="debug" />
+    <add key="loggingLevel" value="all" />
 
     <!-- exceptionLoggingLevel can be "off", "errorMessage" or "stackTrace" -->
     <add key="exceptionLoggingLevel" value="stackTrace" />
 
     <!-- printerNameMappings is semi-colon separated list of mapped printer names in form of friendlyName=printerName;friendlyName2=printerName2... -->
-    <add key="printerNameMappings" value="Bjutiful printer=HPE9367C (HP Officejet Pro 8620)" />
+    <add key="printerNameMappings" value="Honeywell PC42t (203 dpi) - DP=HPE9367C (HP Officejet Pro 8620)" />
   </appSettings>
 </configuration>
