TomPIT.Connected.Printing.Client: Added connection stability (reconnection) for cases when TCP connection is dropped by Windows and updated installation instructions

--- a/Printing/TomPIT.Connected.Printing.Client/App.Development.config
+++ b/Printing/TomPIT.Connected.Printing.Client/App.Development.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-      <add key="cdnUrl" value="https://sys-gorenc.tompitapp.net/cdn/" />
-      <add key="token" value="96c33b59-215b-4060-97cb-280a0b7570fa" />
+      <add key="cdnUrl" value="http://sys-app/common/cdn/" />
+      <add key="token" value="0f69745a-c65f-437b-a025-5ed52e5dca72" />
       <!-- availablePrinters can be "default" (only default printer), "installed" (all installed printers) or semi-colon separated list of printer names -->
-      <add key="availablePrinters" value="Honeywell PC42t (203 dpi) - DP" />
+      <add key="availablePrinters" value="Microsoft Print to PDF;Foxit Reader PDF Printer" />
       <!-- loggingLevel can be "off" < "fatal" < "error" < "warning" < "info" < "debug" < "trace" < "all" -->
       <add key="loggingLevel" value="all" />
       <!-- exceptionLoggingLevel can be "off", "errorMessage" or "stackTrace" -->
       <add key="exceptionLoggingLevel" value="errorMessage" />
 
     <!-- printerNameMappings is semi-colon separated list of mapped printer names in form of friendlyName=printerName;friendlyName2=printerName2... -->
-    <add key="printerNameMappings" value="Honeywell PC42t (203 dpi) - DP=HPE9367C (HP Officejet Pro 8620)" />
+    <add key="printerNameMappings" value="Test Printer PDF=Microsoft Print to PDF;Test Printer PDF 2=Foxit Reader PDF Printer" />
   </appSettings>  
 </configuration>
