TomPIT.Connected.Printing.Client: Added more readable configuration for printers and mappings

--- a/Printing/TomPIT.Connected.Printing.Client/App.Development.config
+++ b/Printing/TomPIT.Connected.Printing.Client/App.Development.config
@@ -1,16 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="printers" type="TomPIT.Connected.Printing.Client.Configuration.PrintersConfigurationHandler, TomPIT.Connected.Printing.Client" />
+    <section name="printerMappings" type="TomPIT.Connected.Printing.Client.Configuration.MappingsConfigurationHandler, TomPIT.Connected.Printing.Client" />
+  </configSections>  
   <appSettings>
       <add key="cdnUrl" value="http://sys-app/common/cdn/" />
+    
       <add key="token" value="0f69745a-c65f-437b-a025-5ed52e5dca72" />
+    
       <!-- availablePrinters can be "default" (only default printer), "installed" (all installed printers) or semi-colon separated list of printer names -->
-      <add key="availablePrinters" value="Microsoft Print to PDF;Foxit Reader PDF Printer" />
+      <add key="availablePrinters" value="list" />
+    
       <!-- loggingLevel can be "off" < "fatal" < "error" < "warning" < "info" < "debug" < "trace" < "all" -->
       <add key="loggingLevel" value="all" />
+    
       <!-- exceptionLoggingLevel can be "off", "errorMessage" or "stackTrace" -->
       <add key="exceptionLoggingLevel" value="errorMessage" />
 
-    <!-- printerNameMappings is semi-colon separated list of mapped printer names in form of friendlyName=printerName;friendlyName2=printerName2... -->
-    <add key="printerNameMappings" value="Test Printer PDF=Microsoft Print to PDF;Test Printer PDF 2=Foxit Reader PDF Printer" />
-  </appSettings>  
+      <!-- printerNameMappings is semi-colon separated list of mapped printer names in form of friendlyName=printerName;friendlyName2=printerName2... -->
+      <add key="printerNameMappings" value="" />
+  </appSettings>
+  
+  <printers>
+    <printer name="Microsoft Print to PDF" />
+    <printer name="Foxit Reader PDF Printer" />
+  </printers>
+
+  <printerMappings>
+    <mapping resourceName="Test Printer PDF" printerName="Microsoft Print to PDF" />
+    <mapping resourceName="Test Printer PDF 2" printerName="Foxit Reader PDF Printer" />
+  </printerMappings>
 </configuration>
