TomPIT.Connected.Printing.Client: Added Printer Status Checking

--- a/Printing/TomPIT.Connected.Printing.Client/TomPIT.Connected.Printing.Client.csproj
+++ b/Printing/TomPIT.Connected.Printing.Client/TomPIT.Connected.Printing.Client.csproj
@@ -23,5 +23,6 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Configuration.Install" />
+    <Reference Include="System.Printing" />
   </ItemGroup>
 </Project>
