Add timeout for print jobs
Add timeout for each print job, in case it locks up due
to printer failure.

No tasks associated.

--- a/Printing/TomPIT.Connected.Printing.Client/App.Debug.config
+++ b/Printing/TomPIT.Connected.Printing.Client/App.Debug.config
@@ -14,5 +14,8 @@
 
     <!-- printerNameMappings is semi-colon separated list of mapped printer names in form of friendlyName=printerName;friendlyName2=printerName2... -->
     <add key="printerNameMappings" value="Honeywell PC42t (203 dpi) - DP=HPE9367C (HP Officejet Pro 8620)" />
+
+	  <!-- the timeout of a single print job in seconds -->
+	  <add key="printJobTimeout" value="30" />
   </appSettings>
 </configuration>
