--- a/Printing/TomPIT.Connected.Printing.Client/App.Release.config
+++ b/Printing/TomPIT.Connected.Printing.Client/App.Release.config
@@ -18,6 +18,9 @@
 
     <!-- printerNameMappings is semi-colon separated list of mapped printer names in form of friendlyName=printerName;friendlyName2=printerName2...; it is combined with  -->
     <add key="printerNameMappings" value="" />
+    
+	<!-- the timeout of a single print job in seconds -->
+	<add key="printJobTimeout" value="30" />
   </appSettings>
   <printers>
     <printer name="\\GRBKRIVLJENJE1\NalepkeKRIVLJENJE" />
