--- a/Printing/TomPIT.Connected.Printing.Client/App.Development.config
+++ b/Printing/TomPIT.Connected.Printing.Client/App.Development.config
@@ -4,31 +4,25 @@
     <section name="printers" type="TomPIT.Connected.Printing.Client.Configuration.PrintersConfigurationHandler, TomPIT.Connected.Printing.Client" />
     <section name="printerMappings" type="TomPIT.Connected.Printing.Client.Configuration.MappingsConfigurationHandler, TomPIT.Connected.Printing.Client" />
   </configSections>  
-  <appSettings>
-      <add key="cdnUrl" value="http://sys-app/common/cdn/" />
-    
-      <add key="token" value="0f69745a-c65f-437b-a025-5ed52e5dca72" />
-    
-      <!-- availablePrinters can be "default" (only default printer), "installed" (all installed printers) or semi-colon separated list of printer names -->
-      <add key="availablePrinters" value="list" />
-    
-      <!-- loggingLevel can be "off" < "fatal" < "error" < "warning" < "info" < "debug" < "trace" < "all" -->
-      <add key="loggingLevel" value="all" />
-    
-      <!-- exceptionLoggingLevel can be "off", "errorMessage" or "stackTrace" -->
-      <add key="exceptionLoggingLevel" value="errorMessage" />
+   <appSettings>
+	   <add key="cdnUrl" value="http://sys-app/common/cdn/" />
+	   <add key="token" value="0f69745a-c65f-437b-a025-5ed52e5dca72" />
+    <!-- availablePrinters can be "default" (only default printer), "installed" (all installed printers) or semi-colon separated list of printer names -->
+    <add key="availablePrinters" value="list" />
+    <!-- loggingLevel can be "off" < "fatal" < "error" < "warning" < "info" < "debug" < "trace" < "all" -->
+    <add key="loggingLevel" value="all" />
+    <!-- exceptionLoggingLevel can be "off", "errorMessage" or "stackTrace" -->
+    <add key="exceptionLoggingLevel" value="errorMessage" />
+    <add key="printerNameMappings" value="" />
 
-      <!-- printerNameMappings is semi-colon separated list of mapped printer names in form of friendlyName=printerName;friendlyName2=printerName2... -->
-      <add key="printerNameMappings" value="" />
+	   <!-- the timeout of a single print job in seconds -->
+	   <add key="printJobTimeout" value="30" />
   </appSettings>
-  
   <printers>
-    <printer name="Microsoft Print to PDF" />
-    <printer name="Foxit Reader PDF Printer" />
+	<printer name="\\grt-zbook\OfficeJetShare" />
   </printers>
 
   <printerMappings>
-    <mapping resourceName="Test Printer PDF" printerName="Microsoft Print to PDF" />
-    <mapping resourceName="Test Printer PDF 2" printerName="Foxit Reader PDF Printer" />
+    <mapping printerName="\\grt-zbook\OfficeJetShare" resourceName="HPE9367C (HP Officejet Pro 8620)" />
   </printerMappings>
 </configuration>
