--- a/Development/TomPIT.Templates.IoT.Design/TomPIT.MicroServices.IoT.Design.csproj
+++ b/Development/TomPIT.Templates.IoT.Design/TomPIT.MicroServices.IoT.Design.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
     <SccProvider>SAK</SccProvider>
@@ -10,9 +10,9 @@
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <RootNamespace>TomPIT.MicroServices.IoT.Design</RootNamespace>
     <AssemblyName>TomPIT.MicroServices.IoT.Design</AssemblyName>
-    <AssemblyVersion>2.2.120.1</AssemblyVersion>
-    <FileVersion>2.2.120.1</FileVersion>
-    <Version>2.2.120.1</Version>
+    <AssemblyVersion>2.2.201.1</AssemblyVersion>
+    <FileVersion>2.2.201.1</FileVersion>
+    <Version>2.2.201.1</Version>
     <Authors>Tom PIT</Authors>
     <Company>Tom PIT</Company>
     <Product>Tom PIT.connected</Product>
