--- a/Management/TomPIT.Management.UI/Management.csproj
+++ b/Management/TomPIT.Management.UI/Management.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
     <SccProvider>SAK</SccProvider>
@@ -10,9 +10,9 @@
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <RootNamespace>TomPIT.Management</RootNamespace>
     <AssemblyName>TomPIT.Connected.Management</AssemblyName>
-    <AssemblyVersion>2.2.120.1</AssemblyVersion>
-    <FileVersion>2.2.120.1</FileVersion>
-    <Version>2.2.120.1</Version>
+    <AssemblyVersion>2.2.201.1</AssemblyVersion>
+    <FileVersion>2.2.201.1</FileVersion>
+    <Version>2.2.201.1</Version>
     <Authors>Tom PIT</Authors>
     <Company>Tom PIT</Company>
     <Product>Tom PIT.connected</Product>
