--- a/Sdk/TomPIT.Sdk/TomPIT.Sdk.csproj
+++ b/Sdk/TomPIT.Sdk/TomPIT.Sdk.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="5.0.2" />
+  </ItemGroup>
+
 </Project>
