--- a/Sdk/TomPIT.Sdk.Examples.Iot/TomPIT.Sdk.Examples.Iot.csproj
+++ b/Sdk/TomPIT.Sdk.Examples.Iot/TomPIT.Sdk.Examples.Iot.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyVersion>2.2.211.3</AssemblyVersion>
+    <FileVersion>2.2.211.3</FileVersion>
+    <Version>2.2.211.3</Version>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\TomPIT.Sdk\TomPIT.Sdk.csproj" />
   </ItemGroup>
-
 </Project>
