Ordinal on ModelSchema implemented

--- a/Development/TomPIT.Templates.Application.Design/TomPIT.MicroServices.Design.csproj
+++ b/Development/TomPIT.Templates.Application.Design/TomPIT.MicroServices.Design.csproj
@@ -20,6 +20,7 @@
   </PropertyGroup>
   <ItemGroup>
     <None Remove="CreateHandlers\Connection.csx" />
+    <None Remove="CreateHandlers\Templates\Api.txt" />
     <None Remove="CreateHandlers\Templates\ApiOperation.txt" />
     <None Remove="CreateHandlers\Templates\DistributedEvent.txt" />
     <None Remove="CreateHandlers\Templates\MicroServiceInfo.txt" />
@@ -31,6 +32,7 @@
     <None Remove="CreateHandlers\Templates\View.txt" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="CreateHandlers\Templates\Api.txt" />
     <EmbeddedResource Include="CreateHandlers\Templates\MicroServiceInfo.txt" />
     <EmbeddedResource Include="CreateHandlers\Templates\ScriptBundlePartial.txt" />
     <EmbeddedResource Include="CreateHandlers\Templates\ScriptBundle.txt" />
