--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+Sys/TomPIT.Sys/sys.json
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
