--- a/Sys/TomPIT.StorageProvider.Azure/TomPIT.StorageProvider.Azure.csproj
+++ b/Sys/TomPIT.StorageProvider.Azure/TomPIT.StorageProvider.Azure.csproj
@@ -9,7 +9,7 @@
     <Product>Tom PIT.connected</Product>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Storage.Blob" Version="11.2.2" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.8.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\TomPIT.Core\TomPIT.Core.csproj" />
