--- a/App/TomPIT.App.UI/App.csproj
+++ b/App/TomPIT.App.UI/App.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
     <SccProvider>SAK</SccProvider>
@@ -11,9 +11,9 @@
     <AssemblyName>TomPIT.Connected.App</AssemblyName>
     <RootNamespace>TomPIT.App</RootNamespace>
     <CopyRefAssembliesToPublishDirectory>true</CopyRefAssembliesToPublishDirectory>
-    <AssemblyVersion>2.2.323.2</AssemblyVersion>
-    <FileVersion>2.2.323.2</FileVersion>
-    <Version>2.2.323.2</Version>
+    <AssemblyVersion>2.2.324.1</AssemblyVersion>
+    <FileVersion>2.2.324.1</FileVersion>
+    <Version>2.2.324.1</Version>
     <Authors>Tom PIT</Authors>
     <Company>Tom PIT</Company>
     <Product>Tom PIT.connected</Product>
