--- a/Runtime/TomPIT.UI/TomPIT.UI.csproj
+++ b/Runtime/TomPIT.UI/TomPIT.UI.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
     <ProjectReference Include="..\..\Core\TomPIT.Core\TomPIT.Core.csproj" />
+    <ProjectReference Include="..\..\Core\TomPIT.Sdk\TomPIT.Sdk.csproj" />
     <ProjectReference Include="..\TomPIT.Extensions\TomPIT.Extensions.csproj" />
     <ProjectReference Include="..\TomPIT.Runtime\TomPIT.Runtime.csproj" />
   </ItemGroup>
