Printing service update (remove unnecessary config options)

--- a/Printing/TomPIT.Connected.Printing.Client/App.Development.config
+++ b/Printing/TomPIT.Connected.Printing.Client/App.Development.config
@@ -2,7 +2,6 @@
 <configuration>
   <configSections>
     <section name="printers" type="TomPIT.Connected.Printing.Client.Configuration.PrintersConfigurationHandler, TomPIT.Connected.Printing.Client" />
-    <section name="printerMappings" type="TomPIT.Connected.Printing.Client.Configuration.MappingsConfigurationHandler, TomPIT.Connected.Printing.Client" />
   </configSections>  
    <appSettings>
 	   <add key="cdnUrl" value="http://sys-app/common/cdn/" />
@@ -19,10 +18,8 @@
 	   <add key="printJobTimeout" value="30" />
   </appSettings>
   <printers>
-	<printer name="\\grt-zbook\OfficeJetShare" />
+    <printer  name="\\GRBKRIVLJENJE1\NalepkeKRIVLJENJE"
+              resourceName="Honeywell PC42t (203 dpi) - DP"/>
   </printers>
 
-  <printerMappings>
-    <mapping printerName="\\grt-zbook\OfficeJetShare" resourceName="HPE9367C (HP Officejet Pro 8620)" />
-  </printerMappings>
 </configuration>
