Update printing service to .NET 5 Rewrite of core functionality Simplification in hopes of stabilization

--- a/Printing/TomPIT.Connected.Printing.Client/App.Development.config
+++ b/Printing/TomPIT.Connected.Printing.Client/App.Development.config
@@ -4,22 +4,18 @@
     <section name="printers" type="TomPIT.Connected.Printing.Client.Configuration.PrintersConfigurationHandler, TomPIT.Connected.Printing.Client" />
   </configSections>  
    <appSettings>
-	   <add key="cdnUrl" value="http://sys-app/common/cdn/" />
-	   <add key="token" value="0f69745a-c65f-437b-a025-5ed52e5dca72" />
-    <!-- availablePrinters can be "default" (only default printer), "installed" (all installed printers) or semi-colon separated list of printer names -->
-    <add key="availablePrinters" value="list" />
+	   <add key="cdnUrl" value="http://sys-app/core/cdn/" />
+	   <add key="token" value="d69c8a22-6368-42c8-8339-3b2a7d87b366" />
     <!-- loggingLevel can be "off" < "fatal" < "error" < "warning" < "info" < "debug" < "trace" < "all" -->
     <add key="loggingLevel" value="all" />
     <!-- exceptionLoggingLevel can be "off", "errorMessage" or "stackTrace" -->
-    <add key="exceptionLoggingLevel" value="errorMessage" />
-    <add key="printerNameMappings" value="" />
-
-	   <!-- the timeout of a single print job in seconds -->
-	   <add key="printJobTimeout" value="30" />
+    <add key="exceptionLoggingLevel" value="stackTrace" />
+	<!-- the timeout of a single print job in seconds -->
+	<add key="printJobTimeout" value="30" />
   </appSettings>
   <printers>
-    <printer  name="\\GRBKRIVLJENJE1\NalepkeKRIVLJENJE"
-              resourceName="Honeywell PC42t (203 dpi) - DP"/>
+    <printer  name="Xerox WorkCentre 3025"
+              resourceName="Skippy"/>
   </printers>
 
 </configuration>
