--- a/Printing/TomPIT.Connected.Printing.Client/App.Debug.config
+++ b/Printing/TomPIT.Connected.Printing.Client/App.Debug.config
@@ -1,21 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <appSettings>
-    <add key="cdnUrl" value="https://sys-gorenc.tompitapp.net/cdn/" />
-    <add key="token" value="96c33b59-215b-4060-97cb-280a0b7570fa" />
-    <!-- availablePrinters can be "default" (only default printer), "installed" (all installed printers) or semi-colon separated list of printer names -->
-    <add key="availablePrinters" value="HPE9367C (HP Officejet Pro 8620)" />
-
-    <!-- loggingLevel can be "off" < "fatal" < "error" < "warning" < "info" < "debug" < "trace" < "all" -->
-    <add key="loggingLevel" value="all" />
-
-    <!-- exceptionLoggingLevel can be "off", "errorMessage" or "stackTrace" -->
-    <add key="exceptionLoggingLevel" value="stackTrace" />
-
-    <!-- printerNameMappings is semi-colon separated list of mapped printer names in form of friendlyName=printerName;friendlyName2=printerName2... -->
-    <add key="printerNameMappings" value="Honeywell PC42t (203 dpi) - DP=HPE9367C (HP Officejet Pro 8620)" />
-
-	  <!-- the timeout of a single print job in seconds -->
-	  <add key="printJobTimeout" value="30" />
-  </appSettings>
+	<configSections>
+		<section name="printers" type="TomPIT.Connected.Printing.Client.Configuration.PrintersConfigurationHandler, TomPIT.Connected.Printing.Client" />
+	</configSections>
+	<appSettings>
+		<add key="cdnUrl" value="http://sys-app/core/cdn/" />
+		<add key="token" value="d69c8a22-6368-42c8-8339-3b2a7d87b366" />
+		<!-- loggingLevel can be "off" < "fatal" < "error" < "warning" < "info" < "debug" < "trace" < "all" -->
+		<add key="loggingLevel" value="all" />
+		<!-- exceptionLoggingLevel can be "off", "errorMessage" or "stackTrace" -->
+		<add key="exceptionLoggingLevel" value="stackTrace" />
+		<!-- the timeout of a single print job in seconds -->
+		<add key="printJobTimeout" value="30" />
+	</appSettings>
+	<printers>
+		<printer  name="Xerox WorkCentre 3025"
+				  resourceName="Skippy"/>
+	</printers>
 </configuration>
