Update print service to support copycount

--- a/Printing/TomPIT.Connected.Printing.Client/App.Development.config
+++ b/Printing/TomPIT.Connected.Printing.Client/App.Development.config
@@ -14,8 +14,8 @@
 	<add key="printJobTimeout" value="30" />
   </appSettings>
   <printers>
-    <printer  name="Xerox WorkCentre 3025"
-              resourceName="Skippy"/>
+    <printer  name="Microsoft Print to PDF"
+              resourceName="PDF Printer"/>
   </printers>
 
 </configuration>
