Add missing Saas client files Add Saas to build solution Add Saas to project references

--- a/Runtime/TomPIT.Runtime/TomPIT.Runtime.csproj
+++ b/Runtime/TomPIT.Runtime/TomPIT.Runtime.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
     <SccProvider>SAK</SccProvider>
@@ -41,5 +41,6 @@
     <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
     <ProjectReference Include="..\..\Core\TomPIT.Core\TomPIT.Core.csproj" />
     <ProjectReference Include="..\..\Core\TomPIT.Sdk\TomPIT.Sdk.csproj" />
+    <ProjectReference Include="..\..\Saas\Clients\Connected.SaaS.Clients\Connected.SaaS.Clients.HealthMonitoring\Connected.SaaS.Clients.HealthMonitoring.csproj" />
   </ItemGroup>
 </Project>
