--- a/Saas/Clients/Connected.SaaS.Clients/Connected.SaaS.Clients/Connected.SaaS.Clients.csproj
+++ b/Saas/Clients/Connected.SaaS.Clients/Connected.SaaS.Clients/Connected.SaaS.Clients.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyVersion>2.3.1117.3</AssemblyVersion>
+    <FileVersion>2.3.1117.3</FileVersion>
+    <Version>2.3.1117.3</Version>
   </PropertyGroup>
-
 </Project>
