--- a/Saas/Clients/Connected.SaaS.Clients/Connected.SaaS.Clients.HealthMonitoring/Connected.SaaS.Clients.HealthMonitoring.csproj
+++ b/Saas/Clients/Connected.SaaS.Clients/Connected.SaaS.Clients.HealthMonitoring/Connected.SaaS.Clients.HealthMonitoring.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyVersion>2.3.1117.3</AssemblyVersion>
+    <FileVersion>2.3.1117.3</FileVersion>
+    <Version>2.3.1117.3</Version>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Connected.SaaS.Clients\Connected.SaaS.Clients.csproj" />
   </ItemGroup>
-
 </Project>
